added value for consent input

--- a/app/views/current/views/water/consent.html
+++ b/app/views/current/views/water/consent.html
@@ -24,7 +24,8 @@
         <p>I am aware the information I submit will be checked.</p>
         <div class="govuk-checkboxes">
           <div class="govuk-checkboxes__item govuk-!-margin-top-7">
-            <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="carcasses">
+          
+            <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
             <label class="govuk-label govuk-checkboxes__label" for="confirm">
               I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application. 
             </label>
