--- a/app/views/current/views/water/farming-type.html
+++ b/app/views/current/views/water/farming-type.html
@@ -10,11 +10,10 @@
 
 {% block content %}
 
+<main class="govuk-main-wrapper"> 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -43,22 +42,7 @@
                   Something else
                 </label>
               </div>
-              <details class="govuk-details" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                        Eligibility
-                    </span>
-                </summary>
-                <div class="govuk-details__text">
-                    This grant is for:
-                    <ul>
-                      <li>arable and horticultural farming businesses<br>supplying the food industry</li>
-                      <li>nurseries growing flowers </li>
-                      <li>forestry nurseries </li>
-                    </ul>
-                </div>
-              </details>
-              </div>
+            </div>
           </fieldset>
         </div>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
@@ -73,8 +57,18 @@
 
 
       </form>
-
     </div>
-  </div>
+    <div class="govuk-grid-column-one-third govuk-!-padding-5">
+      <h3 class="govuk-heading-m govuk-!-padding-top-6">Eligibility</h3>
+      <div class="govuk-body govuk-!-font-size-19">  
+          This grant is for:
+              <ul>
+                <li>arable and horticultural farming businesses<br>supplying the food industry</li>
+                <li>nurseries growing flowers </li>
+                <li>forestry nurseries </li>
+              </ul>
+      </div>        
+   </div>
+  </div> 
 
 {% endblock %}
