added blue line

--- a/app/views/current/views/water/farming-type.html
+++ b/app/views/current/views/water/farming-type.html
@@ -59,7 +59,8 @@
       </form>
     </div>
     <div class="govuk-grid-column-one-third govuk-!-padding-5">
-      <h3 class="govuk-heading-m govuk-!-padding-top-6">Eligibility</h3>
+    <aside class="app-related-items">
+      <h3 class="govuk-heading-m">Eligibility</h3>
       <div class="govuk-body govuk-!-font-size-19">  
           This grant is for:
               <ul>
@@ -67,7 +68,8 @@
                 <li>nurseries growing flowers </li>
                 <li>forestry nurseries </li>
               </ul>
-      </div>        
+      </div> 
+    </aside>         
    </div>
   </div> 
 
