--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -9,12 +9,10 @@
 {% endblock %}
 
 {% block content %}
-
+<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -110,31 +108,6 @@
                 </label>
               </div>
             </div>
-            <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                        Eligibility
-                    </span>
-                </summary>
-                <div class="govuk-details__text">
-                    You can apply if you are:
-                    <ul>
-                      <li>Sole trader</li>
-                      <li>Partnership</li>
-                      <li>Limited company</li>
-                      <li>Charity</li>
-                      <li>Public organisation</li>
-                      <li>Trust</li>
-                      <li>Limited liability partnership</li>
-                      <li>Community interest company  </li>
-                      <li>Local authority </li>
-                      <li>Limited partnership</li>
-                      <li>Industrial and provident society</li>
-                      <li>Co-operative society (Co-Op)</li>
-                      <li>Community benefit society (BenCom)</li>
-                    </ul>
-                </div>
-              </details>
           </fieldset>
         </div>
         <br><br>
@@ -150,8 +123,31 @@
 
 
       </form>
-
+    </div>
+    <div class="govuk-grid-column-one-third govuk-!-padding-top-9">
+      <aside class="app-related-items">
+        <h3 class="govuk-heading-m">Eligibility</h3>
+        <div class="govuk-body govuk-!-font-size-19">  
+          You can apply if you are:
+                    <ul>
+                      <li>Sole trader</li>
+                      <li>Partnership</li>
+                      <li>Limited company</li>
+                      <li>Charity</li>
+                      <li>Public organisation</li>
+                      <li>Trust</li>
+                      <li>Limited liability partnership</li>
+                      <li>Community interest company  </li>
+                      <li>Local authority </li>
+                      <li>Limited partnership</li>
+                      <li>Industrial and provident society</li>
+                      <li>Co-operative society (Co-Op)</li>
+                      <li>Community benefit society (BenCom)</li>
+                    </ul>
+        </div> 
+      </aside>     
     </div>
   </div>
+</main>  
 
 {% endblock %}
