--- a/app/views/current/views/water/country.html
+++ b/app/views/current/views/water/country.html
@@ -9,12 +9,10 @@
 {% endblock %}
 
 {% block content %}
-
+<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -48,18 +46,6 @@
                 </label>
               </div>
             </div>
-            <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                        Eligibility
-                    </span>
-                </summary>
-                <div class="govuk-details__text">
-                    <p>This is only for projects in England.</p>
-                    
-                    <p>Scotland, Wales and Northern Ireland have other grants available.</p> 
-                </div>
-              </details>
           </fieldset>
         </div>
         <br><br>
@@ -72,11 +58,18 @@
           Back to summary page
         </button>
         {% endif %}
-
-
       </form>
-
+    </div>
+    <div class="govuk-grid-column-one-third govuk-!-padding-top-9">
+      <aside class="app-related-items">
+        <h3 class="govuk-heading-m">Eligibility</h3>
+        <div class="govuk-body govuk-!-font-size-19">  
+           <p>This is only for projects in England.</p>
+           <p>Scotland, Wales and Northern Ireland have other grants available.</p> 
+        </div>
+      </aside>    
     </div>
   </div>
+</main>  
 
 {% endblock %}
