--- a/app/views/current/views/water/tenancy.html
+++ b/app/views/current/views/water/tenancy.html
@@ -10,11 +10,10 @@
 
 {% block content %}
 
+<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -38,16 +37,6 @@
                 </label>
               </div>
             </div>
-            <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                        Eligibility
-                    </span>
-                </summary>
-                <div class="govuk-details__text">
-                   The land must be owned or have a tenancy in place until 2026 <br> before starting the project.
-                </div>
-              </details>
           </fieldset>
         </div>
         <br>
@@ -60,11 +49,15 @@
             Back to summary page
           </button>
         {% endif %}
-
-
       </form>
-
+    </div>
+    <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
+      <aside class="app-related-items">
+          <h3 class="govuk-heading-m"> Eligibility </h3>
+          <p> The land must be owned or have a tenancy in place until 2026 <br> before starting the project.</p>
+      </aside>
     </div>
   </div>
+</main>  
 
 {% endblock %}
