--- a/app/views/current/views/water/abstraction-licence.html
+++ b/app/views/current/views/water/abstraction-licence.html
@@ -9,12 +9,10 @@
 {% endblock %}
 
 {% block content %}
-
+<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -51,16 +49,6 @@
               </div>
             </div>
             <br><br>
-            <details class="govuk-details" data-module="govuk-details">
-              <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                Eligibility
-                </span>
-              </summary>
-              <div class="govuk-details__text">
-                Any abstraction licences or variations must be in place by 31 December 2021 (the end of the application window).
-              </div>
-            </details>
           </fieldset>
         </div>
 
@@ -73,11 +61,14 @@
           Back to summary page
         </button>
         {% endif %}
-
-
       </form>
-
     </div>
+    <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
+      <aside class="app-related-items">
+          <h3 class="govuk-heading-m"> Eligibility </h3>
+          <p> Any abstraction licences or variations must be in place by 31 December 2021 (the end of the application window).</p>
+      </aside>
+    </div> 
   </div>
-
+</main>
 {% endblock %}
