new design irrigated-land

--- a/app/views/current/views/water/irrigated-land.html
+++ b/app/views/current/views/water/irrigated-land.html
@@ -13,8 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-        <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset">
+            <div class="govuk-form-group">
                 <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 14 of 18 </span>
                 <h1 class="govuk-label-wrapper">
                  <label class="govuk-label govuk-label--l" for="irrigated-land-current">
@@ -61,23 +60,19 @@
                   Back to summary page
                 </button>
               {% endif %}
-            <fieldset>  
-        </form> 
-    </div>    
+            </div>   
+        </form>                     
+    </div> 
     <div class="govuk-grid-column-one-third govuk-!-padding-5">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m">Eligibility</h3>
+        <h3 class="govuk-heading-m"> Funding  priorities</h3>
         <div class="govuk-body govuk-!-font-size-19">  
-            This grant is for:
-                <ul>
-                  <li>arable and horticultural farming businesses<br>supplying the food industry</li>
-                  <li>nurseries growing flowers </li>
-                  <li>forestry nurseries </li>
-      
-                </ul>
+            RPA wants to fund projects that: 
+                   <ul>
+                      <li>improve productivity</li>
+                   </ul>
         </div>         
-      </aside>                
-    </div>  
+      </aside>   
   </div>
 </main>  
 
