--- a/app/views/current/views/water/irrigation-water-source.html
+++ b/app/views/current/views/water/irrigation-water-source.html
@@ -10,11 +10,10 @@
 
 {% block content %}
 
+<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-
+    <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -107,20 +106,6 @@
                 </label>
               </div>
             </div>
-           <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                        Funding  priorities 
-                    </span>
-                </summary>
-                <div class="govuk-details__text">
-                   RPA wants to fund projects that: 
-                   <ul>
-                    <li>improve the environment</li>
-                    <li>improve water sustainability</li>
-                   </ul>
-                </div>
-            </details> 
           </fieldset>
         </div>
         <br><br>
@@ -138,8 +123,20 @@
 
 
       </form>
-
-    </div>
   </div>
+  <div class="govuk-grid-column-one-third govuk-!-padding-5">
+      <aside class="app-related-items">
+        <h3 class="govuk-heading-m"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">  
+            RPA wants to fund projects that: 
+                   <ul>
+                    <li>improve the environment</li>
+                    <li>improve water sustainability</li>
+                   </ul>
+        </div>         
+      </aside>   
+  </div>
+  </div>
+</main>  
 
 {% endblock %}
