--- a/app/views/current/views/water/collaboration.html
+++ b/app/views/current/views/water/collaboration.html
@@ -10,9 +10,9 @@
 
 {% block content %}
 
+<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
         <div class="govuk-form-group">
@@ -39,19 +39,6 @@
                 </label>
               </div>
             </div>
-            <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
-                <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                        Funding  priorities 
-                    </span>
-                </summary>
-                <div class="govuk-details__text">
-                   RPA wants to fund projects that: 
-                   <ul>
-                    <li>improve water sustainability  </li>
-                   </ul>
-                </div>
-             </details>   
           </fieldset>
         </div>
         <br>
@@ -68,8 +55,18 @@
         {% endif %}
 
       </form>
-
+    </div>
+    <div class="govuk-grid-column-one-third govuk-!-padding-5">
+      <aside class="app-related-items">
+        <h3 class="govuk-heading-m">Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">  
+            RPA wants to fund projects that: 
+                   <ul>
+                    <li>improve water sustainability  </li>
+                   </ul>
+        </div>         
+      </aside>                
     </div>
   </div>
-
+</main>
 {% endblock %}
