--- a/app/views/current/views/water/project-start.html
+++ b/app/views/current/views/water/project-start.html
@@ -24,15 +24,21 @@ Have you already started work on the project?
           <br><br>
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value=" No" {{ checked("project-start", " No") }}>
+              <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="preparatory work" {{ checked("project-start", "preparatory work") }}>
               <label class="govuk-label govuk-radios__label" for="project-start-2">
-                No
+                Yes, preparatory work (for example quotes from suppliers, applying for planning permission) 
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="project-start" name="project-start" type="radio" value="Yes" {{ checked("project-start", "Yes") }}>
+              <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="project work" {{ checked("project-start", "project work") }}>
+              <label class="govuk-label govuk-radios__label" for="project-start-2">
+                Yes, we have begun project work (for example digging, signing contracts, placing orders) 
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="project-start" name="project-start" type="radio" value="No" {{ checked("project-start", "No") }}>
               <label class="govuk-label govuk-radios__label" for="project-start">
-                Yes
+                 No
               </label>
             </div>
           </div>
