consent page changes

--- a/app/views/current/views/water/consent.html
+++ b/app/views/current/views/water/consent.html
@@ -27,7 +27,7 @@
         <div class="govuk-checkboxes__item govuk-!-margin-top-8"> 
           <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
             <label class="govuk-label govuk-checkboxes__label " for="confirm">
-             So that we can continue to improve our services and schemes, we may wish to contact you in the future. 
+              (Optional) &nbsp; So that we can continue to improve our services and schemes, we may wish to contact you in the future. 
               Please confirm if you are happy for us, or a third-party working for us, to contact you.
             </label>
           </div>
