water guidance page

--- a/app/views/current/views/guidance/water.html
+++ b/app/views/current/views/guidance/water.html
@@ -75,7 +75,7 @@
 
 <h2 id="how-to-apply-for-a-grant">How to apply for a grant</h2>
 <h3>Check if your project can apply for a grant</h3>
-<a href="../water/start" class="govuk-heading-s govuk-!-padding-top-5 govuk-!-padding-bottom-4">You need to check if you’re eligible and how well your project fits the funding priorities.</a>
+<p class="govuk-!-padding-3">You need to &nbsp;<a href="../water/start">check if you’re eligible and how well your project fits the funding priorities.</a></p>
 <p>You’ll need:</p>
 <ul>
   <li>information about your business (for example number of employees, turnover)</li>
