--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -65,13 +65,13 @@
           Continue
         </button>
         {# <button>TEST</button> #}
-        {% if data['COMPLETED'] == true %}
+        {# {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
             class="govuk-button govuk-!-margin-right-1 govuk" data-module="govuk-button"
           >
             Back to summary page
           </button>
-        {% endif %}
+        {% endif %} #}
       </form>
     </div>
   </div>
