--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -128,7 +128,7 @@
       <aside class="app-related-items">
         <h3 class="govuk-heading-m">Eligibility</h3>
         <div class="govuk-body govuk-!-font-size-19">  
-          You can apply if you are:
+          You can apply if you are a:
                     <ul>
                       <li>Sole trader</li>
                       <li>Partnership</li>
