country page changes

--- a/app/views/current/views/water/country-fail.html
+++ b/app/views/current/views/water/country-fail.html
@@ -17,7 +17,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p>This is only for projects in England.</p>
+      <p>This grant is only for projects in England.</p>
 
       <p>Scotland, Wales and Northern Ireland have other grants available.</p>
 
