--- a/app/views/current/views/water/country.html
+++ b/app/views/current/views/water/country.html
@@ -64,7 +64,7 @@
       <aside class="app-related-items">
         <h3 class="govuk-heading-m">Eligibility</h3>
         <div class="govuk-body govuk-!-font-size-19">  
-           <p>This is only for projects in England.</p>
+           <p>This grant is only for projects in England.</p>
            <p>Scotland, Wales and Northern Ireland have other grants available.</p> 
         </div>
       </aside>    
